--- a/configs/alexnet/train/conv5.yaml
+++ b/configs/alexnet/train/conv5.yaml
@@ -3,6 +3,7 @@ experiment_name: alexnet_to_ae_conv5_animals
 datasets:
   train: autoencoders.data.ImageNetAnimalsTrain
   validation: autoencoders.data.ImageNetAnimalsValidation
+size: 128
 
 iterator: invariances.iterator.cinn_trainer.AutoencoderConcatTrainer
 loss: iin.losses.iin.Loss
